--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
     <header class="header">
-        <img src="headerImg.jpg" alt="header image">
+        <img src="./images/headerImg.jpg" alt="header image">
         <div class="overlay"></div>
         <h1>Lorem ipsum dolor sit amet</h1>
         <a href="#first-section" class="header-arrow">
@@ -140,7 +140,7 @@
         <div class="cards-wrapper">
             <div class="card first">
                 <div class="content-wrapper">
-                    <img src="gridImg.jpg" alt="grid image">
+                    <img src="./images/gridImg.jpg" alt="grid image">
                     <div class="card-info">
                         <h4>Lorem ipsum dolor sit amet</h4>
                         <p>Morbi sagittis porta dui, vel venenatis tellus faucibus molestie. Morbi sed hendrerit ligula. Maecenas feugiat congue ex, eget feugiat metus porta at. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed eget tortor a arcu convallis feugiat.</p>
@@ -159,7 +159,7 @@
             </div>
             <div class="card">
                 <div class="content-wrapper">
-                    <img src="gridImg.jpg" alt="grid image">
+                    <img src="./images/gridImg.jpg" alt="grid image">
                     <div class="card-info">
                         <h4>Lorem ipsum dolor sit amet</h4>
                         <p>Morbi sagittis porta dui, vel venenatis tellus faucibus molestie. Morbi sed hendrerit ligula. Maecenas feugiat congue ex, eget feugiat metus porta at. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed eget tortor a arcu convallis feugiat.</p>
@@ -178,7 +178,7 @@
             </div>
             <div class="card third">
                 <div class="content-wrapper">
-                    <img src="gridImg.jpg" alt="grid image">
+                    <img src="./images/gridImg.jpg" alt="grid image">
                     <div class="card-info">
                         <h4>Lorem ipsum dolor sit amet</h4>
                         <p>Morbi sagittis porta dui, vel venenatis tellus faucibus molestie. Morbi sed hendrerit ligula. Maecenas feugiat congue ex, eget feugiat metus porta at. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed eget tortor a arcu convallis feugiat.</p>
@@ -206,17 +206,17 @@
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                    <img src="bgslider.jpg" alt="background slider">
+                    <img src="./images/bgslider.jpg" alt="background slider">
                     <h3>Lorem ipsum dolor sit amet</h3>
                     <p>consectetur adipiscing elit. Nam lectus metus, facilisis eget velit ut, tincidunt blandit felis. Nunc scelerisque pulvinar erat nec commodo. Nam commodo ipsum nec velit pellentesque cursus.</p>
                 </div>
                 <div class="swiper-slide">
-                    <img src="bgslider2.jpg" alt="background slider">
+                    <img src="./images/bgslider2.jpg" alt="background slider">
                     <h3>Lorem ipsum dolor sit amet</h3>
                     <p>consectetur adipiscing elit. Nam lectus metus, facilisis eget velit ut, tincidunt blandit felis. Nunc scelerisque pulvinar erat nec commodo. Nam commodo ipsum nec velit pellentesque cursus.</p>
                 </div>
                 <div class="swiper-slide">
-                    <img src="bgslider3.jpg" alt="background slider">
+                    <img src="./images/bgslider3.jpg" alt="background slider">
                     <h3>Lorem ipsum dolor sit amet</h3>
                     <p>consectetur adipiscing elit. Nam lectus metus, facilisis eget velit ut, tincidunt blandit felis. Nunc scelerisque pulvinar erat nec commodo. Nam commodo ipsum nec velit pellentesque cursus.</p>
                 </div>
